--- a/collegechef/assets/css/app.scss
+++ b/collegechef/assets/css/app.scss
@@ -1,3 +1,69 @@
 /* This file is for your main application css. */
 
 @import "~bootstrap/scss/bootstrap";
+
+.row-header {
+    margin: 0px auto;
+    padding: 0px 0px; }
+  
+  .row-content {
+    margin: 0px auto;
+    padding: 50px 0px;
+    border-bottom: 1px ridge;
+    min-height: 400px; }
+  
+  .footer {
+    background-color: #ADD8E6;
+    margin: 0px auto;
+    padding: 20px 0px; }
+  
+  .jumbotron {
+    margin: 0px auto;
+    padding: 70px 30px;
+    background-color: #ADD8E6;
+    color: floralwhite; }
+  
+  .address {
+    font-size: 80%;
+    margin: 0px;
+    color: #0f0f0f; }
+  
+  body {
+    padding-top: 50px 0px;
+    z-index: 0; }
+  
+  .navbar-dark {
+    background-color: #0000A0;
+    color: floralwhite; }
+    
+  .modal .modal-header {
+    background-color: #0000A0;
+    color: floralwhite; }
+    .modal .modal-header .close {
+      color: floralwhite; }
+  
+  .modal .modal-body {
+    background-color: #ADD8E6; }
+  
+  .page-enter {
+    opacity: 0.01;
+    transform: translateX(-100%);
+  }
+
+  .page-enter-active {
+    opacity: 1;
+    transform: translateX(0%);
+    transition: all 300ms ease-in;
+  }
+
+  .page-exit {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+
+  .page-exit-active {
+    opacity: 0.01;
+    transform: translateX(-100%);
+    transition: all 300ms ease-out;
+  }
+  
