--- a/collegechef/assets/css/app.scss
+++ b/collegechef/assets/css/app.scss
@@ -13,15 +13,24 @@
     min-height: 400px; }
   
   .footer {
-    background-color: #ADD8E6;
+    background-color: burlywood;
     margin: 0px auto;
     padding: 20px 0px; }
   
   .jumbotron {
     margin: 0px auto;
     padding: 70px 30px;
-    background-color: #ADD8E6;
-    color: floralwhite; }
+    background-image: url('../js/bgimage.jpeg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 1000px;
+    color: floralwhite;
+    border-bottom:1px solid #ff6a00
+}
+.jumbotron .container {
+  position:relative;
+  top:50px;
+}
   
   .address {
     font-size: 80%;
