--- a/collegechef/assets/css/app.scss
+++ b/collegechef/assets/css/app.scss
@@ -13,7 +13,7 @@
     min-height: 400px; }
   
   .footer {
-    background-color: burlywood;
+    background-color: #643D01;
     margin: 0px auto;
     padding: 20px 0px; }
   
@@ -27,6 +27,7 @@
     color: floralwhite;
     border-bottom:1px solid #ff6a00
 }
+
 .jumbotron .container {
   position:relative;
   top:50px;
@@ -35,24 +36,24 @@
   .address {
     font-size: 80%;
     margin: 0px;
-    color: #0f0f0f; }
+    color: white; }
   
   body {
     padding-top: 50px 0px;
     z-index: 0; }
   
   .navbar-dark {
-    background-color: #0000A0;
+    background-color: #643D01;
     color: floralwhite; }
     
   .modal .modal-header {
-    background-color: #0000A0;
+    background-color: #643D01;
     color: floralwhite; }
     .modal .modal-header .close {
       color: floralwhite; }
   
   .modal .modal-body {
-    background-color: #ADD8E6; }
+    background-color: #AA8350; }
   
   .page-enter {
     opacity: 0.01;
@@ -75,4 +76,43 @@
     transform: translateX(-100%);
     transition: all 300ms ease-out;
   }
-  
+
+  div.ReactTags__tags {
+    position: relative;
+}
+
+/* Styles for the input */
+div.ReactTags__tagInput {
+    width: 200px;
+    border-radius: 2px;
+    display: inline-block;
+}
+
+div.ReactTags__tagInput input.ReactTags__tagInputField,
+div.ReactTags__tagInput input.ReactTags__tagInputField:focus {
+    height: 31px;
+    margin: 0;
+    font-size: 14px;
+    width: 600px;
+    border: 1px solid black;
+    padding: 0 4px;
+}
+
+/* Styles for selected tags */
+div.ReactTags__selected span.ReactTags__tag {
+    border: 1px solid black;
+    background: brown;
+    color: white;
+    font-size: 12px;
+    display: inline-block;
+    padding: 5px;
+    margin: 0 5px;
+    cursor: move;
+    border-radius: 2px;
+}
+
+div.ReactTags__selected a.ReactTags__remove {
+    color:black;
+    margin-left: 5px;
+    cursor: pointer;
+}
