--- a/collegechef/lib/collegechef_web/templates/layout/app.html.eex
+++ b/collegechef/lib/collegechef_web/templates/layout/app.html.eex
@@ -7,6 +7,7 @@
     <title>College Chef</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <script>
+      window.userToken = "TODO";
       window.csrf_token = "<%= Phoenix.Controller.get_csrf_token() %>";
     </script>
   </head>
