--- a/collegechef/assets/css/app.scss
+++ b/collegechef/assets/css/app.scss
@@ -22,11 +22,11 @@
         min-height: 400px; }
   
   .footer {
-    position: relative; 
+    position: absolute; 
     bottom: 0;
     height: 10rem;
-    min-height: 400px;
-    background-color: #643D01;
+    min-height: 200px;
+    background-color: #0353A4;
     width: 100%;
     margin: 0px auto;
     padding: 20px 0px;
@@ -36,6 +36,11 @@
 .jumbo {
     background-image: url('../static/images/background_image.jpeg');
     background-repeat: no-repeat;
+}
+
+.customNav {
+    background-color: #0353A4;
+    color: floralwhite;
 }
 
 .address {
@@ -55,7 +60,7 @@ body {
 }
 
 .modal .modal-header {
-    background-color: #643D01;
+    background-color: #0353A4;
     color: floralwhite;
 }
 
@@ -64,7 +69,7 @@ body {
 }
 
 .modal .modal-body {
-    background-color: #AA8350;
+    background-color: white;
 }
 
 .page-enter {
@@ -117,7 +122,7 @@ div.ReactTags__tagInput input.ReactTags__tagInputField:focus {
 
 div.ReactTags__selected span.ReactTags__tag {
     border: 1px solid black;
-    background: brown;
+    background: #0353A4;
     color: white;
     font-size: 12px;
     display: inline-block;
