--- a/collegechef/assets/css/app.scss
+++ b/collegechef/assets/css/app.scss
@@ -61,6 +61,10 @@
             background-color: #FEE8CB;
         }
         
+        .power_search_button {
+            background-color: #FEE8CB;
+        }
+        
         .row-content {
             margin: 0px auto;
             padding: 50px 0px;
@@ -80,6 +84,14 @@
         
         .footer p {
             font-size: 25px;
+        }
+        
+        .power_search_title {
+            margin: 10px;
+        }
+        
+        .api_card {
+            margin: 5px;
         }
         
         /////
