--- a/collegechef/assets/css/app.scss
+++ b/collegechef/assets/css/app.scss
@@ -94,6 +94,12 @@
             margin: 5px;
         }
         
+        .profile_title {
+            text-align: center;
+            color: #FEE8CB;
+            font-family: 'Rochester', cursive;
+        }
+        
         /////
         .jumbo {
             height: 100vh;
